--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,5 +16,4 @@
     "express": "^5.1.0",
     "mongoose": "^8.15.0",
     "nodemailer": "^7.0.3"
-  }
-}
+  }}
